# pi-monitor

./: .editorconfig  .flake8  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  SECURITY.md  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt
agent/: README.md  pi-monitor-agent.service  pi_monitor_agent.py  pi_monitor_agent_py2.py
dashboard/: README.md  pi-monitor-dashboard.service  pi_monitor_dashboard.py
docs/: .gitkeep
tests/: __init__.py  conftest.py  test_agent.py  test_dashboard.py
